name: timeplot
version: 1.0.4
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Eugene Kirpichov, 2009-2011
maintainer: Eugene Kirpichov <ekirpichov@gmail.com>
stability: stable
homepage: http://haskell.org/haskellwiki/Timeplot
synopsis: A tool for visualizing time series from log files.
description: A tool for visualizing time series from log files.
             Reads an input file with events in different "tracks" and draws a diagram for
             each track, where a diagram may be one of several types. See --help for help and the
             homepage for a bigger description, examples and a tutorial. See presentation:
             <http://www.slideshare.net/jkff/two-visualization-tools> or download:
             <http://jkff.info/presentations/two-visualization-tools.pdf>.
category: Graphics
author: Eugene Kirpichov <ekirpichov@gmail.com>
source-repository head
    type: git
    location: git://github.com/jkff/timeplot.git

executable tplot
    main-is: Tools/TimePlot.hs
    other-modules: Tools.TimePlot.Conf Tools.TimePlot.Incremental 
                   Tools.TimePlot.Plots Tools.TimePlot.Render Tools.TimePlot.Source 
                   Tools.TimePlot.Types
    buildable: True
    ghc-options: -rtsopts
    other-modules: Graphics.Rendering.Chart.Event
    build-depends: Chart >=0.15, base >=3 && <5, bytestring -any,
                   bytestring-lexing -any, cairo -any, colour -any, containers -any,
                   data-accessor ==0.2.*, data-accessor-template >=0.2.1.1 && <0.3,
                   regex-tdfa -any, strptime >=0.1.7, time -any,
                   transformers -any
